Web Page Update
Add more instuctions.
Add publication.
Add a link to the homepage of Netlab

--- a/ArticleNet/index.html
+++ b/ArticleNet/index.html
@@ -41,7 +41,7 @@
       <div class="fill">
         <div class="container">
           <h3><a href="#" ><tt><strong>ArticleNet</strong></tt></a></h3>
-	 	<div style="position:absolute;left:720px;top:88px"><h18>Version1.2. &nbsp Last modified: 11/30/2012.</h18></div>
+	 	<div style="position:absolute;left:720px;top:88px"><h18>Version1.2. &nbsp Last modified: 12/19/2012.</h18></div>
           <img src="./pages/img/logo.png" alt="logo" class="logo">
         </div>
       </div>
@@ -71,7 +71,7 @@
         <img src="./pages/img/pic4.jpg" alt="network picture" height="365px" width="380px" align="absmiddle">
        </div>
 
-	   <footer>ArticleNet Version 1.2. Last Modified: 11/30/2012. <br>Copyright &copy; The Network Laboratory of Biomedical Informatics, The Ohio State University</footer>
+	   <footer>ArticleNet Version 1.2. Last Modified: 12/19/2012. <br>Copyright &copy; <a href="https://netlab.bmi.osumc.edu/" target="_blank">The Network Laboratory of Biomedical Informatics</a>, The Ohio State University</footer>
     </div>     
 </body>
 </html>   
